--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title class="logo">WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="" class="logo"><span class="logo accent">Web</span>Studio</a>
+      <a href="index.html" class="logo"
+        ><span class="logo accent">Web</span>Studio</a
+      >
       <nav>
         <ul class="list-items">
           <li><a href="./index.html" class="nav-item">Студия</a></li>
@@ -108,7 +110,7 @@
       </section>
     </main>
     <footer>
-      <a href="" class="logo-footer"
+      <a href="index.html" class="logo-footer"
         ><span class="logo accent">Web</span>Studio</a
       >
       <address>
