--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="" class="logo"><span class="logo accent">Web</span>Studio</a>
+      <a href="index.html" class="logo"
+        ><span class="logo accent">Web</span>Studio</a
+      >
       <nav>
         <ul class="list-items">
           <li><a href="./index.html" class="nav-item">Студия</a></li>
@@ -115,7 +117,7 @@
     </section>
 
     <footer>
-      <a href="" class="logo-footer"
+      <a href="index.html" class="logo-footer"
         ><span class="logo accent">Web</span>Studio</a
       >
       <address>
